Add Gkernel TW 0.2.2

--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
             <body style="background-color:white;">
               <div align="center"><h2 style="color:black;font-family:Comic Sans MS;font-size:180%;">Grom & Gkernel</h2></div><br><br>
 	  This is the official page of Gkernel and GRom<br><br>
-              kernel TW 0.2 Changelog:<br>
+             Gkernel TW 0.2.2 Changelog:<br>
 	  <ol>
-                <li><strong>Added Hyper gov</strong></li>
-	    <li><strong>Added SmartassV2 gov</strong></li>
-	    <li><strong>Updated Zen to V2</strong></li>
-	    <li><strong>Updated Powersuspend to V 1.7</strong></li>
-	    <li><strong>Added QuickWakeup</strong></li>
-	    <li><strong>Added some tweaks for Interactive gov</strong></li>
-	    <li><strong>Removed old support for BatteryMod</strong></li>
-	    <li><strong>Added some tweaks for Ramdisk</strong></li>
-	    <li><strong>Switched Magisk 14.3 to 14.0</strong></li>
-	    <li><strong>Updated MTweaks to V 2.6.3</strong></li>
+                <li><strong>Active Westwood & HTCP</strong></li>
+	    <li><strong>use -Ofast to compile kernel</strong></li>
+	    <li><strong>mm: adjust tuneables</strong></li>
+	    <li><strong>sensorhub wakelock: Possibly reduce</strong></li>
+	    <li><strong>cpufreq: Mod perms so they are settable in apps</strong></li>
+	    <li><strong>Smartassv2 :Config PowerSuspend</strong></li>
+	    <li><strong>disable I/O stats </strong></li>
+	    <li><strong>fix Samsung typos</strong></li>
+	    <li><strong>disable I/O stats </strong></li>
+	    <li><strong>Set SmartassV2 Gov Default</strong></li>
+	    <li><strong>Add Tweak on Ramdisk</strong></li>
 	  </ol>
 	  Downloads:
 	  <ol>
-                <li><strong><a href="https://www.androidfilehost.com/?fid=962021903579494209">Flat Version</a></strong></li>
-	    <li><strong><a href="https://www.androidfilehost.com/?fid=889964283620767912">Edge Version</a></strong></li>
+                <li><strong><a href="https://androidfilehost.com/?fid=889964283620770487">Flat Version</a></strong></li>
+	    <li><strong><a href="https://androidfilehost.com/?fid=817906626617951023">Edge Version</a></strong></li>
 	  </ol>
 				
